feature/user_sign_up facebook omniauth

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,12 +13,10 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
-            <strong><%= link_to current_user.name, homes_show_path %></strong>
-            <%= link_to 'プロフィール変更', edit_user_registration_path %>
+            <strong><%= link_to current_user.name, user_path(id: current_user.id) %></strong>
             <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
           <% else %>
-            <%= link_to 'サインアップ', new_user_registration_path %>
-            <%= link_to 'ログイン', new_user_session_path %>
+            <%= link_to "Facebookで新規登録/ログイン", user_facebook_omniauth_authorize_path %>
           <% end %>
         </ul>
       </div>
