--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">sumire</a>
+        <% if user_signed_in? %>
+          <a class="navbar-brand" href="/places/new">sumire</a>
+        <% else %>
+          <a class="navbar-brand" href="/">sumire</a>
+        <% end %>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
