--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Places#index</h1>
-<p>Find me in app/views/places/index.html.erb</p>
+<h1>気になるスポットを検索してみよう</h1>
+
+<div class="col-md-6">
+  <%= form_tag list_places_path, :role => "form", :method => :get do %>
+    <div class="form-group">
+      <%= text_field_tag :search, params[:search], { :class => "form-control", :required => true, } %>
+      <%= button_tag( {:type => "submit", :name => nil, :class => "btn btn-default" } ) do %>
+        <span class="glyphicon glyphicon-search">キーワード検索</span>
+      <% end %>
+    </div>
+  <% end %>
+</div>
+
