--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Places#show</h1>
-<p>Find me in app/views/places/show.html.erb</p>
+<h1><%= @place.name %></h1>
+<p><%= @place.address %></p>
+<p><%= @place.phone_number %></p>
+<p><%= @place.google_url %></p>
+<p><%= @place.types_name %></p>
+<p><%= @place.types_number %></p>
