--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
         </button>
         <% if user_signed_in? %>
-          <a class="navbar-brand" href="/places/new">sumire</a>
+          <%= link_to "sumire", current_user, class: "navbar-brand" %>
         <% else %>
           <a class="navbar-brand" href="/">sumire</a>
         <% end %>
@@ -17,10 +17,11 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
-            <strong><%= link_to current_user.name, user_path(id: current_user.id) %></strong>
-            <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+            <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
+            <li><%= link_to '新しいマイマップを作成', new_mymap_path %><li>
+            <li><%= link_to '新規スポット検索', places_path %></li>
           <% else %>
-            <%= link_to "Facebookで新規登録/ログイン", user_facebook_omniauth_authorize_path %>
+            <li><%= link_to "Facebookで新規登録/ログイン", user_facebook_omniauth_authorize_path %></li>
           <% end %>
         </ul>
       </div>
