--- a/app/views/mymaps/new.html.erb
+++ b/app/views/mymaps/new.html.erb
@@ -1,2 +1,19 @@
-<h1>Mymaps#new</h1>
-<p>Find me in app/views/mymaps/new.html.erb</p>
+<h1>マイマップを作ろう</h1>
+
+<div class="col-md-12">
+  <%= form_for @mymap do |f| %>
+    <%= render 'layouts/error_messages', model: f.object %>
+
+    <div class="form-group">
+      <%= f.label :name, "マイマップ名" %>
+      <%= f.text_field :name %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :comment, "説明" %>
+      <%= f.text_area :comment %>
+    </div>
+
+    <%= f.submit "登録", class: 'btn btn-primary btn-block' %>
+  <% end %>
+</div>
