--- a/app/views/mymaps/show.html.erb
+++ b/app/views/mymaps/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Mymaps#show</h1>
-<p>Find me in app/views/mymaps/show.html.erb</p>
+<h1><%= @mymap.name %></h1>
+
+<%= link_to( "削除", @mymap, method: :delete, data: { confirm: "#{@mymap.name} の位置情報を削除します" }, :title => "delete" ) %>
