--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -4,3 +4,4 @@
 <p><%= @place.google_url %></p>
 <p><%= @place.types_name %></p>
 <p><%= @place.types_number %></p>
+<%= image_tag @place_picture.picture.thumb.url %>
