--- a/app/assets/stylesheets/users/show1-rspnsv.css
+++ b/app/assets/stylesheets/users/show1-rspnsv.css
@@ -58,7 +58,7 @@
     }
 
     .box{
-       background-color: #cccccc;
+       background-color: black;
        border-radius: 5px;
        color: white;
        display: block;
@@ -69,6 +69,7 @@
        text-align: center;
        margin-right: 10px;
        margin-bottom: 10px;
+       opacity:0.8;
        position: relative;
        width: 145px;
     }
