--- a/app/views/mymaps/search.html.erb
+++ b/app/views/mymaps/search.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag "mymaps/search", :media => "all" %>
+<%= stylesheet_link_tag "mymaps/search.css", :media => "all" %>
 <%= stylesheet_link_tag "mymaps/search-rspnsv", :media => "all" %>
         <content>
         <h1><%= @user.name %>さんの<br>マイマップからスポットを検索</h1>
