--- a/app/views/user_mymaps/_favorite_button.html.erb
+++ b/app/views/user_mymaps/_favorite_button.html.erb
@@ -1,6 +1,6 @@
   <% if current_user.favoriting?(mymap) %>
       <div class="hrt-box hrtBox">
-      <%= link_to user_mymap_path(mymap_id: mymap.id), method: :delete do%>
+      <%= link_to user_mymap_path(mymap.id), method: :delete do%>
         <%= image_tag("heart_blue.png") %>
         <span id="numCount">
           <div><%= mymap_counts(mymap) %></div>
