--- a/app/assets/stylesheets/mymap_searchs/index-rspnsv.css
+++ b/app/assets/stylesheets/mymap_searchs/index-rspnsv.css
@@ -18,9 +18,6 @@
         width: 320px;
     }
     .disc-1{
-        border-bottom: solid medium #70CADF;
-        color: #696969;
-
         cursor: pointer;
         cursor: hand;
         display: inline-block;
@@ -52,7 +49,7 @@
         width: 310px;
     }
     .box{
-        background-color: #cccccc;
+        background-color: black;
         border-radius: 5px;
         color: white;
         display: block;
@@ -63,6 +60,7 @@
         text-align: center;
         margin-right: 10px;
         margin-bottom: 10px;
+        opacity:0.8;
         position: relative;
         width: 145px; 
     }
