--- a/app/assets/stylesheets/mymaps/new.css
+++ b/app/assets/stylesheets/mymaps/new.css
@@ -6,6 +6,36 @@
   width:375px;
 }
 
+.edit_mymap{
+  width:375px;
+}
+
+#edit_mymap{
+  width:375px;
+}
+
+.detailBox{
+    background-color: #cccccc;
+    border-radius: 5px;
+    color: white;
+    display: block;
+    font-size: 12px;
+    height: 157px;
+    margin: 0px auto;
+    margin-top: 20px;
+    position: relative;
+    text-align: center;
+    margin-bottom: 20px;
+    width: 335px; 
+}
+
+.detailPic{
+    border-radius: 5px;
+    height: 157px;
+    object-fit: cover;
+    width: 335px;
+}
+
 .spot-name{
     border: solid thin #9B9B9B;
     border-radius: 8px;
@@ -48,3 +78,7 @@
     width: 335px;
 }
 
+#tag_desc{
+  margin-left:20px;
+  display:inline-block;
+}
