--- a/app/assets/stylesheets/mymaps/search-rspnsv.css
+++ b/app/assets/stylesheets/mymaps/search-rspnsv.css
@@ -51,8 +51,7 @@
         cursor: hand;
         height: 50px;
         line-height: 50px;
-        margin: 0px 10px;
-        margin-top: 30px;
+        margin: 0px 10px 30px 10px;
         bottom: 20px;
         text-align: center;
         width: 300px;
