--- a/app/assets/stylesheets/mymaps/show-rspnsv.css
+++ b/app/assets/stylesheets/mymaps/show-rspnsv.css
@@ -69,7 +69,7 @@
         margin: 0px auto;
         position: relative;
         text-align: center;
-        margin: 0px auto;
+        margin-top:10px;
         margin-bottom: 20px;
         width: 300px; 
     }
@@ -248,7 +248,7 @@
     }
 
     .box{
-        background-color: #cccccc
+        background-color: black;
         border-radius: 5px;
         color: white;
         display: block;
@@ -259,8 +259,9 @@
         text-align: center;
         margin-right: 10px;
         margin-bottom: 10px;
+        opacity:0.8;
         position: relative;
-        width: 145px; 
+        width: 145px;
     }
 
     .box-pic{
