--- a/app/assets/stylesheets/users/show-rspnsv.css
+++ b/app/assets/stylesheets/users/show-rspnsv.css
@@ -59,7 +59,7 @@
     }
 
     .box{
-       background-color: #cccccc;
+       background-color: black;
        border-radius: 5px;
        color: white;
        display: block;
@@ -70,6 +70,7 @@
        text-align: center;
        margin-right: 10px;
        margin-bottom: 10px;
+       opacity:0.8;
        position: relative;
        width: 145px;
     }
@@ -90,8 +91,7 @@
         cursor: hand;
         height: 50px;
         line-height: 50px;
-        margin: 0px auto;
-        margin-top: 30px;
+        margin: 30px auto;
         bottom: 20px;
         text-align: center;
         width: 280px;
