--- a/app/assets/stylesheets/users/show1.css
+++ b/app/assets/stylesheets/users/show1.css
@@ -12,6 +12,7 @@
     float: left;
     height: 50px;
     width: 50px;
+    object-fit:cover;
 }
 
 .prof-name{
@@ -72,9 +73,10 @@
 }
 
 .box{
-    background-color: #cccccc;
+    background-color: black;
     border-radius: 5px;
     color: white;
+    font-weight:bold;
     display: block;
     font-size: 12px;
     line-height: 163px;
@@ -83,28 +85,12 @@
     text-align: center;
     margin-right: 20px;
     margin-bottom: 20px;
+    opacity:0.7;
     position: relative;
     width: 157px;
 }
 
-.mymaps_title {
-  color:white;
-}
-
-.mymaps_title:hover{
-  color:white;
-}
-
-.all_mymaps_title {
-  color:white;
-}
-
-.all_mymaps_title:hover{
-  color:white;
-}
-
 .box:hover{
-    background-color: black;
     border-radius: 5px;
     cursor: pointer;
     cursor: hand;
@@ -183,7 +169,6 @@
     height:16px;
     width:33px;
     float:left;
-    position: relative;
 }
 
 .hrt-box img{
@@ -196,12 +181,17 @@
 }
 
 #numCount{
-    position:absolute;
-    top:15%;
-    left; 60%;
+    display: inline-block;
+    width:20px;
+    float:right;
     font-size:8px;
+    line-height:13px;
+    position:absolute;
+    right:0;
+    top:15%;
     z-index: 999;
 }
+
 .name-box{
     bottom: 6px;
     color: white;
