--- a/app/views/mymap_searchs/index.html.erb
+++ b/app/views/mymap_searchs/index.html.erb
@@ -1,20 +1,21 @@
-<%= stylesheet_link_tag "mymap_searchs/index.css", :media => "all" %>
+<%= stylesheet_link_tag "mymap_searchs/index", :media => "all" %>
 <%= stylesheet_link_tag "mymap_searchs/index-rspnsv", :media => "all" %>
 <h1>検索結果</h1>
         <content>
             <%= form_tag({action: 'index'}, {method: 'get'}) do %>
-              <input type="text" name="search" id="search" class="search-box", placeholder="探したいマイマップ名やタグを検索" >
+              <input type="text" name="search" id="search" class="search-box" placeholder="探したいマイマップ名やタグを検索" >
               <%= submit_tag '検索', :name => nil %>
             <% end %>
             <div class="discription">
-                <p class="disc-1">おすすめの<br>マイマップ</p>
-                <p class="disc-2">フォローユーザーの<br>新着マイマップ</p>
+                <p class="disc-1"><a href="/mymap_searchs/recomend_mymaps">おすすめの<br>マイマップ</a></p>
+                <p class="disc-2"><a href="/mymap_searchs/following_mymaps">フォローユーザーの<br>新着マイマップ</a></p>
             </div>
         </content>
         <% if @mymaps %>
             <div class="boxContainer">
                 <% @mymaps.each do |mymap| %>
                   <div class="box">
+                    <a class="mymap_title" href="/mymaps/<%= mymap.id %>">
                       <% if mymap.picture.url %>
                         <%= image_tag mymap.picture.url, class: "box-pic" %>
                       <% else %>
@@ -30,7 +31,7 @@
                           <%= image_tag "no-picture.png", class: "box-pic" %>
                         <% end %>
                       <% end %>
-                      <p class="title"><%= link_to mymap.name, mymap, class: "mymaps_title" %></p>
+                      <p class="title"><%= mymap.name %></p>
                       <div class="dot-box">
                         <% places = mymap.places.all %>
                         <% place_type = places.map{|place| place.types_number} %>
@@ -51,7 +52,8 @@
                       <div class="name-box">
                           <p><%= mymap.user.name %></p>
                       </div>
-                    </div>
+                    </a>
+                  </div>
                 <% end %>
             </div>
         <% end %>
