--- a/app/views/mymaps/_search_result.html.erb
+++ b/app/views/mymaps/_search_result.html.erb
@@ -1,16 +1,18 @@
-<%= stylesheet_link_tag "users/show", :media => "all" %>
+<%= stylesheet_link_tag "users/show.css", :media => "all" %>
 <%= stylesheet_link_tag "users/show-rspnsv", :media => "all" %>
 <content>
 <div class="boxContainer">
+  <% unless @places.empty? %>
   <% @places.each do |place| %>
     <% place_picture = place.place_pictures.first %>
     <div class="box">
+      <a class="mymaps_title" href="/places/<%= place.id %>">
       <% if place_picture %>
         <%= image_tag place_picture.picture.url, class: "box-pic" %>
       <% else %>
         <%= image_tag "no-picture.png", class: "box-pic" %>
       <% end %>
-      <p class="title"><%= link_to place.name, place, class: "mymaps_title" %></p>
+      <p class="title"><%= place.name %></p>
       <div class="dot-box">
         <% if place.types_number == 0 %>
           <div class="dot" id="eat"></div>
@@ -22,7 +24,11 @@
           <div class="dot" id="stay"></div>
         <% end %>
       </div>
+      </a>
     </div>
+  <% end %>
+  <% else %>
+    <p>該当する検索結果が見つかりませんでした。</p>
   <% end %>
 </div>
 </content>
