--- a/app/views/mymaps/new.html.erb
+++ b/app/views/mymaps/new.html.erb
@@ -15,9 +15,10 @@
     <label><input type="radio" value="2" name="mymap[status]" id="mymap_status_2">非公開（自分のみ）</label>
   </div>
 
-  <%= text_field_tag 'mymap[tag_list]', @mymap.tag_list.join(','), class: "textarea-1", placeholder: "タグ（任意）" %>
+  <%= text_field_tag 'mymap[tag_list]', @mymap.tag_list.join(','), class: "textarea-1", placeholder: "タグ  例： 中野、カフェ、行きつけ" %>
+  <p id="tag_desc">※「、」で区切ってタグを作成できます。</p>
   <textarea name="mymap[comment]" id="mymap_comment" class="textarea-2" rows="10" cols="60" placeholder="メモ"></textarea>
 
-  <input type="submit" name="commit" value="マイマップを作成" class="enter" data-disable-with="マイマップを作成">
+  <input type="submit" name="commit" value="マイマップを作成" class="enter">
 <% end %>
 </content>
