--- a/app/views/places/plus_place.html.erb
+++ b/app/views/places/plus_place.html.erb
@@ -1,10 +1,11 @@
+<%= stylesheet_link_tag "places/plus_place", :media => "all" %>
+<%= stylesheet_link_tag "places/plus_place-rspnsv", :media => "all" %>
+<content>
 <%= form_for @plus_place, :url => {:action => 'plus_place_create'} do |f| %>
   <%= render 'layouts/error_messages', model: f.object %>
 
-  <div class="form-group">
-    <%= f.label :mymap_id, "追加するマイマップ" %>
-    <%= f.collection_select :mymap_id, current_user.mymaps.all, :id, :name, :prompt => true %>
-  </div>
+  <%= f.collection_select :mymap_id, current_user.mymaps.all, :id, :name, {:prompt => true}, {:class => "mymap-select"} %>
 
-  <%= f.submit "登録", class: 'btn btn-primary btn-block' %>
+  <%= f.submit "このマイマップに登録", class: 'enter' %>
 <% end %>
+</content>
