--- a/app/views/relationships/_follow_button.html.erb
+++ b/app/views/relationships/_follow_button.html.erb
@@ -1,7 +1,7 @@
 <% unless current_user == user %>
   <% if current_user.following?(user) %>
     <div class="follow-btn">
-      <%= link_to relationship_path(follow_id: user.id), method: :delete do %>
+      <%= link_to relationship_path(user.id), method: :delete do %>
         <%= image_tag("follow_on.png")%>
       <% end %>
     </div>
