--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Sumire</title>
+    <title>Sumire.</title>
     <%= csrf_meta_tags %>
 
     <%= favicon_link_tag("sumire.ico") %>
